20231114 - Refactor of destinations and waypoints module
